# Virtual-TA-SMU

./: .gitignore  Multiagent_system.py  README.md  VectorDB.py  app.py  pyproject.toml  requirements.txt
Datasets/Chemistry/: Chemistry_Data.py  chemistry_corpus.txt
Datasets/Math/: Math_Data.py  math_corpus.txt
Datasets/Physics/: Physics_Data.py  physics_corpus.txt
Multi-Agent/: math_agent.py
MultiAgent/: __init__.py  chemistry_agent.py  leader_reviewer.py  math_agent.py  multi_agent.py  physics_agent.py  utils.py
faiss_index_chemistry/: index.pkl
faiss_index_math/: index.faiss  index.pkl
faiss_index_physics/: index.pkl
