[project]
name = "local_multi_agents"
version = "0.1.0"
description = "Local multi-agent system using LangChain + AutoGen + HuggingFace + Unsloth + FAISS + Tavily"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "accelerate==1.11.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "altair==5.5.0",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.4.0",
    "autogen-agentchat==0.7.5",
    "autogen-core==0.7.5",
    "autogen-ext==0.7.5",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "bitsandbytes==0.48.2",
    "bleach==6.3.0",
    "blinker==1.9.0",
    "brotli==1.1.0",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "colorama==0.4.6",
    "comm==0.2.3",
    "cut-cross-entropy==25.1.1",
    "dataclasses-json==0.6.7",
    "datasets==4.3.0",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "diffusers==0.35.2",
    "dill==0.4.0",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "einops==0.8.1",
    "executing==2.2.1",
    "faiss-cpu==1.12.0",
    "fastapi==0.120.2",
    "fastjsonschema==2.21.2",
    "ffmpy==0.6.4",
    "filelock==3.20.0",
    "fqdn==1.5.1",
    "frozenlist==1.8.0",
    "fsspec==2025.9.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "googlesearch-python==1.3.0",
    "greenlet==3.2.4",
    "groovy==0.1.2",
    "h11==0.16.0",
    "hf-transfer==0.1.9",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "iniconfig==2.3.0",
    "ipykernel==7.1.0",
    "ipython==9.6.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.11.1",
    "joblib==1.5.2",
    "json5==0.12.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.10",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-core==0.3.79",
    "langchain-experimental==0.3.4",
    "langchain-tavily==0.2.12",
    "langchain-text-splitters==0.3.11",
    "langgraph==1.0.1",
    "langgraph-checkpoint==3.0.0",
    "langgraph-prebuilt==1.0.1",
    "langgraph-sdk==0.2.9",
    "langsmith==0.4.38",
    "lark==1.3.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mistune==3.1.4",
    "mpmath==1.3.0",
    "msgspec==0.19.0",
    "multidict==6.7.0",
    "multiprocess==0.70.16",
    "mypy-extensions==1.1.0",
    "narwhals==2.10.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "notebook==7.4.7",
    "notebook-shim==0.2.4",
    "numpy==2.3.4",
    "ollama==0.6.0",
    "openai==2.6.1",
    "opentelemetry-api==1.38.0",
    "orjson==3.11.4",
    "ormsgpack==1.11.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "peft==0.17.1",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==5.29.5",
    "psutil==7.1.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pycparser==2.23",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.11.0",
    "pydeck==0.9.1",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "regex==2025.10.23",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rich==14.2.0",
    "rpds-py==0.28.0",
    "ruff==0.14.2",
    "safehttpx==0.1.7",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "semantic-version==2.10.0",
    "send2trash==1.8.3",
    "sentence-transformers==5.1.2",
    "sentencepiece==0.2.1",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "shtab==1.7.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.44",
    "stack-data==0.6.3",
    "starlette==0.49.1",
    "streamlit==1.51.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tavily-python==0.7.12",
    "tenacity==9.1.2",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tinycss2==1.4.0",
    "tokenizers==0.22.1",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "torch==2.8.0",
    "torchao==0.14.1",
    "torchvision==0.23.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.57.1",
    "triton==3.4.0",
    "trl==0.23.0",
    "typeguard==4.4.4",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tyro==0.9.35",
    "tzdata==2025.2",
    "unsloth==2025.10.11",
    "unsloth-zoo==2025.10.12",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "watchdog==6.0.0",
    "wcwidth==0.2.14",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "xformers==0.0.32.post2",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]

[dependency-groups]
dev = ["pytest", "ruff", "black"]
